--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "packageManager": "pnpm@8.11.0",
   "dependencies": {
+    "@ai-sdk/cerebras": "^2.0.29",
     "@ai-sdk/groq": "3.0.0-beta.20",
     "@ai-sdk/openai": "3.0.0-beta.34",
     "@ai-sdk/react": "3.0.0-beta.72",
@@ -44,10 +45,12 @@
     "dotenv": "^16.5.0",
     "eslint": "9.19.0",
     "framer-motion": "^12.4.7",
+    "gray-matter": "^4.0.3",
     "langchain": "^1.0.1",
     "lucide-react": "^0.477.0",
     "next": "16.0.10",
     "next-contentlayer2": "^0.5.3",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.2.1",
     "pdf-parse": "^1.1.1",
     "postcss": "8.4.29",
@@ -69,6 +72,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "baseline-browser-mapping": "^2.9.19",
     "eslint-config-next": "^16.0.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
