--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "postcss": "8.4.29",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-wrap-balancer": "^1.1.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
