--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@types/node": "20.8.6",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "ai": "6.0.0-beta.72",
     "autoprefixer": "10.4.15",
     "class-transformer": "^0.5.1",
